Se arreglo la parte superior del formulario

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             </form>
         </div>
     </nav>
+
     <!-- --------------------------- Fin navegación ---------------------------- -->
 
     <!-- ----------------------------------------------------------------------- -->
@@ -57,7 +58,7 @@
         <!-- ----------------------------------------------------------------------- -->
         <!--                                Membrete                                 -->
         <!-- ----------------------------------------------------------------------- -->
-        <div class="membrete row my-md-5">
+        <!-- <div class="membrete row my-md-5">
             <div class="col-12 col-lg-3 text-center">
                 <img src="img/logo_iglesia.png" class="img-fluid rounded h-100" alt="logo_iglesia.png">
             </div>
@@ -74,7 +75,26 @@
                     <h5><span class="font-weight-bold">Pagina: </span>29 de 40</h5>
                 </div>
             </div>
-        </div>
+        </div> -->
+
+        <table class="table table-bordered my-md-5">
+            <tbody>
+                <tr>
+                    <td class="text-center"><img src="img/logo_iglesia.png" class="img-fluid rounded h-100" alt="logo_iglesia.png"></td>
+                    <td class="px-0">
+                        <h4 class="text-center font-weight-bold">ESTANDAR - PROCESOS DE APOYO COVID-19</h4>
+                        <h4 class="bg-primary p-2 text-center">IGLESIA PENTECOSTAL UNIDA DE COLOMBIA</h4>
+                        <h4 class="text-center">PLAN DE CONTENGENCIA Y MANUAL DE BIOSEGURIDAD</h4>
+                    </td>
+                    <td class="px-0">
+                        <h4>COD: PR-AST CV 01</h4>
+                        <h4 class="bg-primary p-2 mb-0">Fecha: 01-09-2020</h4>
+                        <h5 class="bg-primary p-2 mt-0"><span class="font-weight-bold">Version: </span>001</h5>
+                        <h5><span class="font-weight-bold">Pagina: </span>29 de 40</h5>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
 
         <h3 class="text-center"><span class="font-weight-bold">Anexo 2: </span>Cuestionario previo de ingreso a la congregación</h3>
 
